--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,400i,700|Raleway:300,300i,400,400i,500,500i,600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli:200,300" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link href="font-awesome/css/all.css" rel="stylesheet">
+  <link href="font-awesome/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="queries.css">
   <title>Document</title>
 </head>
 
