--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="font-awesome/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="queries.css">
-  <title>Document</title>
+  <title>Rob's Business Card</title>
 </head>
 
 <body>
