Add favicon to site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="font-awesome/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="queries.css">
   <title>Rob's Business Card</title>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
 </head>
 
 <body>
