Correct misspelling of Develop in card description

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <section class="card-description-text">
     <p class="card-descripion">
-      I build websites that are fast, safe and secure. I can Design, Develope and Maintain your website. Here are some of my other services:
+      I build websites that are fast, safe and secure. I can Design, Develop and Maintain your website. Here are some of my other services:
     </p>
   </section>
 
